dhall/tests/type-inference/failure/unit/MergeAnnotationNotType.txt
Type error: error: Merge2ArgMustBeUnionOrOptional
 --> <current file>:1:0
  |
1 | merge {=} <> : Type
  | ^^^^^^^^^^^^^^^^^^^ Merge2ArgMustBeUnionOrOptional
  |
